fix: keyboard navigation, focus rings, colours and spacing

--- a/src/app.css
+++ b/src/app.css
@@ -77,10 +77,10 @@
 		--border: 20 5.9% 90%;
 		--input: 20 5.9% 90%;
 
-		--primary: 24 9.8% 10%;
+		--primary: var(--gruvlfg2);
 		--primary-foreground: 60 9.1% 97.8%;
 
-		--secondary: 60 4.8% 95.9%;
+		--secondary: var(--gruvlbg2);
 		--secondary-foreground: 24 9.8% 10%;
 
 		--accent: var(--gruvlbg2);
@@ -89,7 +89,7 @@
 		--destructive: 0 72.2% 50.6%;
 		--destructive-foreground: 60 9.1% 97.8%;
 
-		--ring: 20 14.3% 4.1%;
+		--ring: var(--gruvblue);
 
 		--radius: 0.5rem;
 
@@ -114,10 +114,10 @@
 		--border: 12 6.5% 15.1%;
 		--input: 12 6.5% 15.1%;
 
-		--primary: 60 9.1% 97.8%;
+		--primary: var(--gruvdfg2);
 		--primary-foreground: 24 9.8% 10%;
 
-		--secondary: 12 6.5% 15.1%;
+		--secondary: var(--gruvdbg2);
 		--secondary-foreground: 60 9.1% 97.8%;
 
 		--accent: var(--gruvdbg2);
@@ -126,7 +126,7 @@
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 60 9.1% 97.8%;
 
-		--ring: 24 5.7% 82.9%;
+		--ring: var(--gruvyellow);
 	}
 }
 
